0.4.2 - currently working on
- [#1894] Change: Only reset the auto_increment value if it is much higher than the highest UID
- [#1986] Change: Only reset the auto_increment value if actually will be different than the current value

0.4.1 - released 2005-05-25
- [#1893] Feature: Allow to use custom "is_dummy" fields per table
- [#1908] Fix: Registration for event not possible if umlauts in fe-user "Name" field
- [#1907] Fix: Oelib's locallang_db.xml is damaged
- [#1904] Fix: Non-sense unit tests in tx_oelib_testingFramework_testcase
- [#1903] Change: Use $this->setExpectedException() instead of try-catch-block in Unit tests
- [#1861] Change: Statically cache the results of hasTableColumnUid and getListOfAllTables
- [#1860] Change: Cache the results of enableFields
- [#1857] Change: markTableAsDirty() now accepts comma-separated list of table names
- [#1870] Fix: createRelation() now throws exception on negative UIDs
- [#1837] Change: Add discardInstance() to the header proxy factory
- [#1797] Feature: Test that the mailer factory can create real mailers
- [#1831] Change: Remove $this->originalConfiguration from the configuration proxy's testcase
- [#1818] Change: Comment and whitespace consistency cleanup
- [#1526] Feature: Use a strategy for setting HTTP headers
- [#1772] Feature: Add constants for frequently used error messages
- [#1457] Change: Use the configuration proxy in the template helper
- [#1739] Fix: template.php imported twice
- [#1744] Fix: CSS bug in the configuration check warning
- [#1262] Feature: Automatically remove surplus blank lines from the e-mail body

0.4.0 - released 2008-03-10
- [#1726] Fix: Parts of testingFramework broken with TYPO3 4.2 (>rev 3365)
- [#1714] Fix: pi_getLL copied from oelib breaks BE localization of seminars in mod2
- [#1627] Feature: Create a file with common constants
- [#1548] Change: Move templating functions from realty_pi1 to the template helper