@@ -1,4 +1,5 @@
 0.4.2 - currently working on
+- [#2031] Fix: loginFrontEndUser should store the complete FE user record in $GLOBALS['TSFE']->fe_user->user
 - [#1894] Change: Only reset the auto_increment value if it is much higher than the highest UID
 - [#1986] Change: Only reset the auto_increment value if actually will be different than the current value
 
